update style of annotation text symbolizer to avoid horizontal scrollbar (#3979)

--- a/web/client/themes/default/less/annotations.less
+++ b/web/client/themes/default/less/annotations.less
@@ -36,6 +36,7 @@
     .mapstore-annotations-info-viewer-styler-container {
         .ms2-border-layout-content {
             overflow: auto;
+            position: relative;
         }
     }
 
@@ -515,4 +516,9 @@
 
 .modal-dialog-container{
     border: none;
+}
+
+.ms-style-manager {
+    position: absolute;
+    width: 100%;
 }
